--- a/application-deploymentservice.yml
+++ b/application-deploymentservice.yml
@@ -9,7 +9,8 @@ spec:
   - name: flask-container
     image: kunchalavikram/flask-simplehello:v1
     ports:
-    - conatinerPort: 5000
+    - containerPort: 5000
+
 ---
 apiVersion: v1
 kind: Service
@@ -24,6 +25,7 @@ spec:
     protocol: TCP
   selector:
     app: flask-hello
+
 ---
 apiVersion: v1
 kind: Pod
@@ -36,7 +38,8 @@ spec:
   - name: flask-container
     image: kunchalavikram/flask-simplegreet:v1
     ports:
-    - conatinerPort: 5000
+    - containerPort: 5000
+
 ---
 apiVersion: v1
 kind: Service
@@ -56,7 +59,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: greet-pod
+  name: details-pod
   labels: 
     app: flask-details
 spec:
@@ -64,7 +67,8 @@ spec:
   - name: flask-container
     image: kunchalavikram/flask-simpledetails:v1
     ports:
-    - conatinerPort: 5000
+    - containerPort: 5000
+
 ---
 apiVersion: v1
 kind: Service
@@ -79,4 +83,3 @@ spec:
     protocol: TCP
   selector:
     app: flask-details
-
